# scalar_emt_analysis

./: .gitignore  README.md
data-analysis/: emt-flowtime-fit.sh  emt-global-fit.sh  make-dat.sh
data-analysis/data/param/flowtime-fit/: flowtime-c3-fit-par-g0.1-L128-m2-0.0305.xml  flowtime-c3-fit-par-g0.1-L128-m2-0.031.xml  flowtime-c3-fit-par-g0.1-L256-m2-0.0305.xml  flowtime-c3-fit-par-g0.1-L256-m2-0.031.xml  flowtime-c3-fit-par-g0.1-L64-m2-0.0305.xml  flowtime-c3-fit-par-g0.1-L64-m2-0.031.xml  flowtime-c3-fit-par-g0.2-L128-m2-0.061.xml  flowtime-c3-fit-par-g0.2-L128-m2-0.062.xml  flowtime-c3-fit-par-g0.2-L256-m2-0.061.xml  flowtime-c3-fit-par-g0.2-L256-m2-0.062.xml  flowtime-c3-fit-par-g0.2-L64-m2-0.061.xml  flowtime-c3-fit-par-g0.2-L64-m2-0.062.xml  flowtime-c3-fit-par-g0.3-L128-m2-0.091.xml  flowtime-c3-fit-par-g0.3-L128-m2-0.092.xml  flowtime-c3-fit-par-g0.3-L256-m2-0.091.xml  flowtime-c3-fit-par-g0.3-L256-m2-0.092.xml  flowtime-c3-fit-par-g0.3-L64-m2-0.091.xml  flowtime-c3-fit-par-g0.3-L64-m2-0.092.xml
data-analysis/data/param/global-fit/: global_fit_param.xml
data-analysis/data/processed_data/flowtime_fit_data/param/: flowtime-c3-fit-par-g0.1-L128-m2-0.0305.xml  flowtime-c3-fit-par-g0.1-L128-m2-0.031.xml  flowtime-c3-fit-par-g0.1-L256-m2-0.0305.xml  flowtime-c3-fit-par-g0.1-L256-m2-0.031.xml  flowtime-c3-fit-par-g0.1-L64-m2-0.0305.xml  flowtime-c3-fit-par-g0.1-L64-m2-0.031.xml  flowtime-c3-fit-par-g0.2-L128-m2-0.061.xml  flowtime-c3-fit-par-g0.2-L128-m2-0.062.xml  flowtime-c3-fit-par-g0.2-L256-m2-0.061.xml  flowtime-c3-fit-par-g0.2-L256-m2-0.062.xml  flowtime-c3-fit-par-g0.2-L64-m2-0.061.xml  flowtime-c3-fit-par-g0.2-L64-m2-0.062.xml  flowtime-c3-fit-par-g0.3-L128-m2-0.091.xml  flowtime-c3-fit-par-g0.3-L128-m2-0.092.xml  flowtime-c3-fit-par-g0.3-L256-m2-0.091.xml  flowtime-c3-fit-par-g0.3-L256-m2-0.092.xml  flowtime-c3-fit-par-g0.3-L64-m2-0.091.xml  flowtime-c3-fit-par-g0.3-L64-m2-0.092.xml
data-analysis/data/processed_data/global_fit_data/param/: global_fit_input.xml
src/: EmtC3GlobalFit.cpp  EmtFlowtimeC3Fit.cpp  EmtWriteFlowtimeC3.cpp  Makefile.am  acinclude.m4  bootstrap.sh  configure.ac
