SHARED_CXXFLAGS = 

bin_PROGRAMS =          \
  emt-write-flowtime-c3 \
  emt-flowtime-c3-fit   \
  emt-c3-global-fit   

emt_write_flowtime_c3_SOURCES  = EmtWriteFlowtimeC3.cpp
emt_write_flowtime_c3_CXXFLAGS = $(SHARED_CXXFLAGS)

emt_flowtime_c3_fit_SOURCES  = EmtFlowtimeC3Fit.cpp
emt_flowtime_c3_fit_CXXFLAGS = $(SHARED_CXXFLAGS)

emt_c3_global_fit_SOURCES  = EmtC3GlobalFit.cpp
emt_c3_global_fit_CXXFLAGS = $(SHARED_CXXFLAGS)

ACLOCAL_AMFLAGS = -I .buildutils/m4
